fix: hide width overflow and change img (#9)
* fix: hide width overflow and change img

* root issue

--- a/src/binary-builders.module.scss
+++ b/src/binary-builders.module.scss
@@ -3,7 +3,7 @@
 .wrapper {
   min-height: 100vh;
   height: 100%;
-  min-width: 100vw;
+  min-width: 100%;
   background: rgb(124,251,248);
   background: -moz-linear-gradient(90deg, rgba(124,251,248,0.25) 0%, rgba(0,0,0,1) 25%, rgba(0,0,0,1) 75%, rgba(231,57,188,0.25) 100%);
   background: -webkit-linear-gradient(90deg, rgba(124,251,248,0.25) 0%, rgba(0,0,0,1) 25%, rgba(0,0,0,1) 75%, rgba(231,57,188,0.25) 100%);
